# npy-stream-writer

./: Cargo.toml  LICENSE  README.md
examples/: write_npy.rs
src/: error.rs  lib.rs
